# Building_microservice_with_FastApi

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: common.yml  release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: error.py  paginated.py  user.py
app/routers/: users.py
tests/: conftest.py  test_api.py  test_clear_db.py  test_crud.py  test_pagination.py  test_smoke.py
utils/: random_data.py
