[tool.poetry]
name = "building-microservice-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Bohdan Obruch <bodan1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.1"
fastapi = "^0.111.1"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydantic = "^2.8.2"
fastapi-pagination = "^0.12.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
